app/assets/stylesheets/jpstudy/words.scss
.page-title {
  margin: 12px 0px 0px 0px;
  &:lang(jp) {
    font-weight: 400;
  }
  .home-link {
    color: inherit;
  }
}

.word-form {
  margin: 12px 0px;
  padding: 6px 12px 12px 12px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
  border: 1px solid #F3F4F6;
  border-radius: 4px;
  .form-field {
    label {
      display: block;
      padding: 8px 0px 5px 0px;
      font-weight: 500;
    }
    input {
      font-size: 1.1em;
      border-radius: 4px;
      border: 1px solid #bbb;
      padding: 12px;
      width: 200px;
      height: 12px;
      &:focus {
        outline-color: #3B82F6;
      }
    }
    textarea {
      font-size: 1.1em;
      border-radius: 4px;
      border: 1px solid #bbb;
      padding: 12px;
      height: 12px;
      font-family: 'Roboto', Arial, Helvetica, sans-serif;
      height: auto; // required to make html row setting work
      &:focus {
        outline-color: #3B82F6;
      }
    }
  }
  .form-actions {
    padding-top: 10px;
    display: flex;
    align-items: center;
    input[type="submit"] {
      display: inline-block;
    }
  }
  .back-button {
    display: inline-block;
    margin-left: 8px;
  }
}

.words-list-page {
  .page-title {
    a { text-decoration: none; }
  }
  .filters {
    margin-top: 10px;
    padding: 8px 0px 0px 0px;
    display: flex;
    flex-direction: column;
    a {
      text-decoration: none;
      display: flex;
      align-items: center;
      float: left;
      width: fit-content;
      &:not(:last-child) {
        margin-bottom: 2px;
      }
    }
    .filter-description {
      color: #9CA3AF;
      padding-left: 6px;
    }
    .filter-on svg {
      transform: rotate(180deg);
    }
    .filter-on svg,
    .search-results svg {
      color: #8B5CF6;
    }
    .filter-off svg {
      color: #9CA3AF;
    }
  }
  .words-list-container {
    padding-top: 6px;
    .no-words-message {
      text-align: center;
      padding-top: 40px;
      color: #9CA3AF;
      p {
        margin: 4px 0px;
      }
      @media (max-width: 460px) {
        p {
          display: inline;
        }
      }
    }
  }
}

.new-word {
  float: right;
  margin-top: -36px;
}

.word {
  margin: 12px 0px;
  padding: 8px 12px;
  // == materialize shadow
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
  // == medium tailwind shadow
  // box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
  // == small tailwind shadow
  // box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
  border-style: solid;
  border-width: 1px;
  border-color: #F3F4F6;
  border-radius: 4px;
  position: relative;

  &.hidden { display: none; }

  .delete button,
  .edit a,
  .cards-created button {
    background: none;
    border: none;
    float: right;
    text-decoration: none;
    margin-top: -3px;
    color: #D1D5DB;
    padding: 1px;
    font-size: 0.8em;
    cursor: default;
    .icon-solid,
    .icon-outline {
      height: 20px;
      &:hover {
        cursor: pointer;
      }
      &.unchecked {
        color: #9CA3AF;
      }
      &.checked {
        color: #10B981;
      }
    }
    &:disabled {
      cursor: not-allowed;
      .icon-solid,
      .icon-outline {
        &:hover {
          cursor: not-allowed;
        }
      }
    }
  }

  .loader {
    border: 3px solid #fff; /* negative space */
    border-top: 3px solid #D1D5DB; /* spinning part */
    border-bottom: 3px solid #D1D5DB; /* spinning part */
    border-radius: 50%;
    width: 12px;
    height: 12px;
    animation: spin 1s linear infinite;
    margin-right: 2px;
    margin-top: 1px;
    @keyframes spin {
      0% { transform: rotate(0deg); }
      100% { transform: rotate(360deg); }
    }
  }

  .note {
    float: right;
    margin: -3px 3px 0px 1px;
    color: #D1D5DB;
    padding: 1px;
  }

  .delete button {
    margin-right: -9px;
  }

  .translation {
    padding-bottom: 4px;
    .japanese {
      font-size: 1.4em;
    }
    .english {
      .right-arrow {
        height: 12px;
        color: #9CA3AF;
      }
    }
    @media (max-width: 600px) {
      span { display: block; }
      .english { padding-left: 0px; }
      .right-arrow { display: none; }
    }
  }
  .source {
    color: #9CA3AF;
    padding-bottom: 7px;
    @media (max-width: 600px) {
      .added-on {
        display: block;
      }
      .large-only {
        display: none;
      }
    }
  }
  .resources {
    a { text-decoration: none; }
  }

  .tooltip {
    position: relative;
    display: inline-block;
    &:hover {
      .tooltiptext {
        visibility: visible;
      }
    }
    .tooltiptext {
      visibility: hidden;
      width: 120px;
      background-color: #374151;
      color: #fff;
      text-align: center;
      border-radius: 6px;
      padding: 5px 8px;
      position: absolute;
      z-index: 1;
      top: 120%;
      left: 22%;
      margin-left: -60px;
      font-size: 0.8em;
      &::after {
        content: "";
        position: absolute;
        bottom: 100%;
        left: 50%;
        margin-left: -5px;
        border-width: 5px;
        border-style: solid;
        border-color: transparent transparent #374151 transparent;
      }
    }
  }
}

.words-in-out-page {
  h3 {
    margin-top: 36px
  }
  .actions {
    a {
      display: inline-block;
      &:not(:last-child) {
        margin-right: 8px;
      }
    }
  }
}

.words-export-page {
  .actions {
    margin-top: 28px;
    .export-button {
      display: inline-flex;
      flex-direction: row;
      align-items: center;
      width: fit-content;
      padding-left: 12px;
      &:not(:last-child) {
        margin: 0px 6px 6px 0px;
      }
      .download-icon {
        margin-right: 2px;
      }
    }
  }
  .new-words {
    font-size: 1.1em;
  }
}

.words-import-page {
  .csv-format {
    font-family: 'Roboto Mono', monospace;
    list-style-type: none;
    margin: 0;
    padding: 0;
  }
  .import-csv-form {
    margin-top: 28px;
    font-size: 1.1em;
    input[type="file"] {
      font-size: 1em;
      margin: 0px 0px 14px 1px;
      width: 100%;
    }
    ::-webkit-file-upload-button {
      // to style the file upload button
      padding: 2px 6px;
      border-radius: 0.6em;
      border-style: solid;
      border-color: #D1D5DB;
      background-color: #E5E7EB;
      cursor: pointer;
      color: #1F2937;
    }
    .inner-form-instructions {
      margin-top: 36px;
    }
    .includes-headers-field-row,
    .overwrite-matching-words-field-row {
      display: flex;
      flex-direction: row;
      align-items: center;
      .label-text {
        margin-left: 6px;
      }
    }
    input[type="submit"] {
      margin-top: 36px;
      display: block;
    }
  }
}


.words-search-page {
  .search-form-container {
    display: flex;
    flex-direction: column;
    width: 100%;
    align-items: center;
    form {
      max-width: 400px;
      width: 100%;
      label {
        display: block;
        padding: 8px 0px 5px 0px;
        font-weight: 500;
      }
      input[type="text"] {
        display: block;
        font-size: 1.1em;
        border-radius: 4px;
        border: 1px solid #bbb;
        padding: 12px;
        margin-bottom: 5px;
        width: 93%;
        height: 12px;
        &:focus {
          outline-color: #3B82F6;
        }
      }
      input[type="submit"] {
        margin-top: 18px;
      }
    }
  }
}

.skeleton-word {
  .delete, .edit, .cards-created {
    svg {
      user-select: none;
      cursor: default !important;
      color: #E5E7EB !important;
      background-color: #E5E7EB;
      animation: pulse 2s cubic-bezier(0.4, 0, 0.6 ,1) infinite;
    }
  }
  .japanese,
  .english-text,
  .added-on,
  .source-name,
  .right-arrow {
    color: #E5E7EB !important;
    background-color: #E5E7EB;
    animation: pulse 2s cubic-bezier(0.4, 0, 0.6 ,1) infinite;
  }
  .resources {
    display: flex;
    flex-direction: row;
    .skeleton-resource-link {
      display: inline-block;
      height: 20px;
      width: 20px;
      margin-right: 5px;
      background-color: #E5E7EB;
      animation: pulse 2s cubic-bezier(0.4, 0, 0.6 ,1) infinite;
    }
  }
  @keyframes pulse {
    50% {opacity: .5 }
  }
}

